# pythonMVC

./: .pypirc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  model.py  pyproject.toml  router.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  config.yml  feature_request.md
.github/workflows/: workflow.yml
PythonMVC/: __init__.py  admin.py  app.py  cache.py  controller.py  db.py  security.py
PythonMVC/cli/: __init__.py  database.py  generate.py  scaffold_templates.py
cli/: _utils.py  database.py  generate.py  new.py  scaffold_templates.py
tests/: test_import.py
